data/k8s-scr-mgr/k8s-scr-mgr/template/scr-template.yaml
#################################################################################################
# The template is using token which get resolved when the template is called by k8s-scr-mgr:
# <PREFIX>:            A prefix when the SCR container is loaded into Kubernetes. If prefix is used the artefacts in K8S will be the container image name plus a prefix.
# <IMAGE-NAME>:        Name of the SCR image in the container registry to be loaded
# <SCR-NAME>:          SCR name is the same as the Image-Name, but using hyphen (-) where Image-Name is using an underscore (_)
# <NAMESPACE>:         The namespace where the containetr is loaded
# <APP-OWNER>:         Contact person responsable for the SCR container
# <SCR-TAG>:           Container tag
# <IMAGE-PULL-POLICY>: Image pull policy
# <HOST>:              URL where Kubernetes is running
#################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <PREFIX><SCR-NAME>
  namespace: <NAMESPACE>
  labels:
    app-owner: <APP-OWNER>
    app.kubernetes.io/name: <PREFIX><SCR-NAME>
spec:
  replicas: 1
  selector:
    matchLabels:
      app-owner: <APP-OWNER>
      app.kubernetes.io/name: <PREFIX><SCR-NAME>
  template:
    metadata:
      labels:
        app-owner: <APP-OWNER>
        app.kubernetes.io/name: <PREFIX><SCR-NAME>
    spec:
      containers:
      - name: <PREFIX><SCR-NAME>
        image: <CONTAINER-REGISTRY>/<IMAGE-NAME>:<SCR-TAG>
        imagePullPolicy: <IMAGE-PULL-POLICY>
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
<DB-SECRET-MOUNT>
<ENV-VARS>          
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsUser: 1001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
      restartPolicy: Always
      securityContext: {}
      imagePullSecrets:
      - name: scr-docker-pull-secret
      volumes:
<DB-SECRET-VOLUME>
---
apiVersion: v1
kind: Service
metadata:
  name: <PREFIX><SCR-NAME>
  namespace: <NAMESPACE>
  labels:
    app-owner: <APP-OWNER>
    app.kubernetes.io/name: <PREFIX><SCR-NAME>
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app-owner: <APP-OWNER>
    app.kubernetes.io/name: <PREFIX><SCR-NAME>
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <PREFIX><SCR-NAME>
  namespace: <NAMESPACE>
  labels:
    app-owner: <APP-OWNER>
    app.kubernetes.io/name: <PREFIX><SCR-NAME>
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - <HOST>
    secretName: net-sas-com-app-certs
  rules:
  - host: <HOST>
    http:
      paths:
      - path: /<SCR-NAME>
        pathType: Prefix
        backend:
          service:
            name: <PREFIX><SCR-NAME>
            port:
              number: 80
